Revision date changed to display at the top of the page.

--- a/material/base.html
+++ b/material/base.html
@@ -142,6 +142,13 @@
           {% endblock %}
           <div class="md-content">
             <article class="md-content__inner md-typeset">
+              {% if page and page.meta and not page.meta.is_index %}
+                {% if page.meta.git_revision_date_localized or
+                      page.meta.revision_date
+                %}
+                  {% include "partials/source-date.html" %}
+                {% endif %}
+              {% endif %}
               {% block content %}
                 {% if page.edit_url %}
                   <a href="{{ page.edit_url }}" title="{{ lang.t('edit.link.title') }}" class="md-content__button md-icon">
@@ -152,13 +159,6 @@
                   <h1>{{ page.title | default(config.site_name, true)}}</h1>
                 {% endif %}
                 {{ page.content }}
-                {% if page and page.meta %}
-                  {% if page.meta.git_revision_date_localized or
-                        page.meta.revision_date
-                  %}
-                    {% include "partials/source-date.html" %}
-                  {% endif %}
-                {% endif %}
               {% endblock %}
               {% block disqus %}
                 {% include "partials/integrations/disqus.html" %}
