--- a/src/base.html
+++ b/src/base.html
@@ -278,6 +278,14 @@
           <!-- Article -->
           <div class="md-content">
             <article class="md-content__inner md-typeset">
+              <!-- Last update of source file -->
+              {% if page and page.meta and not page.meta.is_index %}
+                {% if page.meta.git_revision_date_localized or
+                      page.meta.revision_date
+                %}
+                  {% include "partials/source-date.html" %}
+                {% endif %}
+              {% endif %}
 
               <!-- Content -->
               {% block content %}
@@ -305,14 +313,6 @@
                 <!-- Content -->
                 {{ page.content }}
 
-                <!-- Last update of source file -->
-                {% if page and page.meta %}
-                  {% if page.meta.git_revision_date_localized or
-                        page.meta.revision_date
-                  %}
-                    {% include "partials/source-date.html" %}
-                  {% endif %}
-                {% endif %}
               {% endblock %}
 
               <!-- Disqus integration -->
